functioning app for submission

--- a/src/base.css
+++ b/src/base.css
@@ -5,9 +5,8 @@ body {
   padding: 50px;
 }
 
-.big-lorem-ipsum {
-  font-size: 50px;
-  font-weight: 300;
-  margin: 0 auto;
-  max-width: 15em;
+#header {
+  display: flex;
+  justify-content: space-between;
+  max-width: 600px;
 }
